--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./assets/styles.css" />
   </head>
   <body>
+    <span class="no-mobile"
+      >Hi there! Unfortunately, this site is not optimized for small
+      screens/mobile devices yet. Check back later, there are plans to implement
+      usability! For now, please use a computer for all of your trivia
+      needs.</span
+    >
     <div id="container">
       <h1 id="welcome">Welcome to Ultimate Trivia</h1>
       <h2 id="category-selector">
