Worked on button functionality

--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
       <div id="button-container">
         <div id="button-row-1">
           <h3 class="categories">General</h3>
-          <button class="button" id="anything-goes">Anything Goes</button>
+          <button class="button" id="anything-goes">Random</button>
           <button class="button" id="general-knowledge">
             General Knowledge
           </button>
         </div>
         <h3 class="categories">Entertainment</h3>
         <div id="button-row-2">
-          <button class="button" id="video-games">Video Games</button>
-          <button class="button" id="movies">Movies</button>
-          <button class="button" id="music">Music</button>
+          <button value="videoGames" class="button" id="video-games">Video Games</button>
+          <button value="movies" class="button" id="movies">Movies</button>
+          <button value="music" class="button" id="music">Music</button>
         </div>
         <div id="button-row-3">
           <h3 class="categories">Misc.</h3>
-          <button class="button" id="sports">Sports</button>
-          <button class="button" id="computers">Computers</button>
-          <button class="button" id="art">Art</button>
-          <button class="button" id="animals">Animals</button>
+          <button value="sports" class="button" id="sports">Sports</button>
+          <button value="computers" class="button" id="computers">Computers</button>
+          <button value="art" class="button" id="art">Art</button>
+          <button value="animals" class="button" id="animals">Animals</button>
         </div>
       </div>
     </div>
