--- a/game.html
+++ b/game.html
@@ -9,14 +9,38 @@
     <link rel="stylesheet" href="./assets/main.css" />
   </head>
   <body>
+    <span class="no-mobile"
+      >Hi there! Unfortunately, this site is not optimized for small
+      screens/mobile devices yet. Check back later, there are plans to implement
+      usability! For now, please use a computer for all of your trivia
+      needs.</span
+    >
     <main class="container">
       <p id="current-time"></p>
       <div class="header">
         <h1 id="title">Ultimate Trivia</h1>
         <h2 id="category">Category Name Here</h2>
-        <div class="score">
-          <p id="total-correct">Total Correct:</p>
-          <p id="amount-correct">/<span id="question-amount"></span></p>
+        <div class="game-container">
+          <div class="score">
+            <p id="total-correct">Total Correct:</p>
+            <!-- Both of these elements below are appended via DOM -->
+            <p id="amount-correct">/<span id="question-amount"></span></p>
+          </div>
+          <div class="content-container">
+            <h3 class="question">
+              <!-- Questions are appended here via DOM -->
+            </h3>
+            <ul class="posible-answers">
+              <!-- Answers are appended here via DOM -->
+            </ul>
+            <div id="correct-answer">
+            <!-- The result will be appended here via DOM -->
+            </div>
+          </div>
+          <div class="footer">
+            <button class="button" id="check-answer">Check Answer</button>
+            <button class="button" id="play-again">Play Again</button>
+          </div>
         </div>
       </div>
     </main>
