Buttons now redirect correctly

--- a/index.html
+++ b/index.html
@@ -22,23 +22,82 @@
       <div id="button-container">
         <div id="button-row-1">
           <h3 class="categories">General</h3>
-          <button class="button" id="anything-goes">Random</button>
-          <button class="button" id="general-knowledge">
+          <button
+            class="button"
+            id="anything-goes"
+            onclick="location.href='./categories/random/random.html'"
+          >
+            Random
+          </button>
+          <button
+            class="button"
+            id="general-knowledge"
+            onclick="location.href='./categories/general knowledge/general.html'"
+          >
             General Knowledge
           </button>
         </div>
         <h3 class="categories">Entertainment</h3>
         <div id="button-row-2">
-          <button value="videoGames" class="button" id="video-games">Video Games</button>
-          <button value="movies" class="button" id="movies">Movies</button>
-          <button value="music" class="button" id="music">Music</button>
+          <button
+            value="videoGames"
+            class="button"
+            id="video-games"
+            onclick="location.href='./categories/video games/video-games.html'"
+          >
+            Video Games
+          </button>
+          <button
+            value="movies"
+            class="button"
+            id="movies"
+            onclick="location.href='./categories/movies/movies.html'"
+          >
+            Movies
+          </button>
+          <button
+            value="music"
+            class="button"
+            id="music"
+            onclick="location.href='./categories/music/music.html'"
+          >
+            Music
+          </button>
         </div>
         <div id="button-row-3">
           <h3 class="categories">Misc.</h3>
-          <button value="sports" class="button" id="sports">Sports</button>
-          <button value="computers" class="button" id="computers">Computers</button>
-          <button value="art" class="button" id="art">Art</button>
-          <button value="animals" class="button" id="animals">Animals</button>
+          <button
+            value="sports"
+            class="button"
+            id="sports"
+            onclick="location.href='./categories/sports/sports.html'"
+          >
+            Sports
+          </button>
+          <button
+            value="computers"
+            class="button"
+            id="computers"
+            onclick="location.href='./categories/computers/computers.html'"
+          >
+            Computers
+          </button>
+          <button
+            value="art"
+            class="button"
+            id="art"
+            onclick="location.href='./categories/art/art.html'"
+          >
+            Art
+          </button>
+          <button
+            value="animals"
+            class="button"
+            id="animals"
+            onclick="location.href='./categories/animals/animals.html'"
+          >
+            Animals
+          </button>
         </div>
       </div>
     </div>
