--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
       >Hi there! Unfortunately, this site is not optimized for small
       screens/mobile devices yet. Check back later, there are plans to implement
       usability! For now, please use a computer for all of your trivia
-      needs.</span
-    >
+      needs.</span>
     <div id="container">
       <h1 id="welcome">Welcome to Ultimate Trivia</h1>
       <h2 id="category-selector">
-        Please Select a category below to get started.
+        Please select a category below to get started.
       </h2>
       <div id="button-container">
         <div id="button-row-1">
-          <h3 class="categories">General</h3>
+          <h3 class="categories categories1">General</h3>
+          <div class="buttons">
           <button
             class="button"
             id="anything-goes"
@@ -36,9 +36,11 @@
           >
             General Knowledge
           </button>
+          </div>
         </div>
-        <h3 class="categories">Entertainment</h3>
         <div id="button-row-2">
+          <h3 class="categories categories2">Entertainment</h3>
+          <div class="buttons">
           <button
             value="videoGames"
             class="button"
@@ -63,9 +65,11 @@
           >
             Music
           </button>
+          </div>
         </div>
         <div id="button-row-3">
-          <h3 class="categories">Misc.</h3>
+          <h3 class="categories categories3">Misc.</h3>
+          <div class="buttons">
           <button
             value="sports"
             class="button"
@@ -98,6 +102,7 @@
           >
             Animals
           </button>
+          </div>
         </div>
       </div>
     </div>
